@@ -25,7 +25,6 @@ SOFTWARE.
 */
 
 import haven.Config;
-import haven.MainFrame;
 
 import java.util.Arrays;
 import java.util.Iterator;
@@ -320,14 +319,14 @@ public class XML {
         try {
             char initial = string.charAt(0);
             if (initial == '-' || (initial >= '0' && initial <= '9')) {
-                Long value = new Long(string);
+                Long value = Long.valueOf(string);
                 if (value.toString().equals(string)) {
                     return value;
                 }
             }
         }  catch (Exception ignore) {
             try {
-                Double value = new Double(string);
+                Double value = Double.valueOf(string);
                 if (value.toString().equals(string)) {
                     return value;
                 }
